syntax = "proto3";

package reporting.v1;

option go_package = "github.com/MuhibNayem/Travio/server/api/proto/reporting/v1;reportingpb";

import "google/protobuf/timestamp.proto";

// ReportingService provides analytics and reporting.
service ReportingService {
  // GetRevenueReport returns revenue data for an organization.
  rpc GetRevenueReport(RevenueReportRequest) returns (RevenueReportResponse);
  
  // GetBookingTrends returns booking trends over time.
  rpc GetBookingTrends(BookingTrendsRequest) returns (BookingTrendsResponse);
  
  // GetTopRoutes returns the most popular routes.
  rpc GetTopRoutes(TopRoutesRequest) returns (TopRoutesResponse);
  
  // GetOrganizationMetrics returns overall organization metrics.
  rpc GetOrganizationMetrics(OrganizationMetricsRequest) returns (OrganizationMetricsResponse);
  
  // ExportReport exports data in various formats.
  rpc ExportReport(ExportReportRequest) returns (ExportReportResponse);
  
  // Health check
  rpc Health(HealthRequest) returns (HealthResponse);
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
}

message RevenueReportRequest {
  string organization_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
  int32 limit = 4;
  int32 offset = 5;
  string sort_order = 6; // asc, desc
}

message RevenueReportResponse {
  repeated RevenueData data = 1;
  int64 total_count = 2;
}

message RevenueData {
  string organization_id = 1;
  google.protobuf.Timestamp date = 2;
  int64 order_count = 3;
  int64 total_revenue_paisa = 4;
  double avg_order_value = 5;
  string currency = 6;
}

message BookingTrendsRequest {
  string organization_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
  string granularity = 4; // hour, day, week, month
  int32 limit = 5;
  int32 offset = 6;
}

message BookingTrendsResponse {
  repeated BookingTrendData data = 1;
  int64 total_count = 2;
}

message BookingTrendData {
  string organization_id = 1;
  google.protobuf.Timestamp period = 2;
  int64 booking_count = 3;
  int64 completed_count = 4;
  int64 cancelled_count = 5;
  double conversion_rate = 6;
}

message TopRoutesRequest {
  string organization_id = 1;
  string sort_by = 2; // bookings, revenue
  int32 limit = 3;
}

message TopRoutesResponse {
  repeated TopRouteData data = 1;
}

message TopRouteData {
  string organization_id = 1;
  string trip_id = 2;
  string route_name = 3;
  int64 booking_count = 4;
  int64 revenue = 5;
  double avg_occupancy = 6;
}

message OrganizationMetricsRequest {
  string organization_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}

message OrganizationMetricsResponse {
  string organization_id = 1;
  int64 total_orders = 2;
  int64 total_revenue = 3;
  double avg_order_value = 4;
  int64 total_customers = 5;
  double repeat_customer_rate = 6;
  double avg_bookings_per_day = 7;
  double cancellation_rate = 8;
  double refund_rate = 9;
}

message ExportReportRequest {
  string organization_id = 1;
  string report_type = 2; // revenue, bookings, routes
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
  string format = 5; // csv, json
  int32 max_rows = 6;
}

message ExportReportResponse {
  bytes data = 1;
  string filename = 2;
  string content_type = 3;
  int64 row_count = 4;
}
